[package]
name = "arcsend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
chrono = "0.4.22"
lazy_static = "1.4.0"
rand = "0.8.5"
rocket = { version = "0.5.0-rc.2", features=["secrets", "json"] }
rocket_contrib = "0.4.11"
ron = "0.8.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
sha3 = "0.10.5"
sled = "0.34.7"
